public/index.css
body, html{
    padding: 0;
    margin: 0;
    font-family: 'Open Sans', sans-serif;
    background: #cb2d3e;  /* fallback for old browsers */
    background: -webkit-linear-gradient(to right, #ef473a, #cb2d3e);  /* Chrome 10-25, Safari 5.1-6 */
    background: linear-gradient(to right, #ef473a, #cb2d3e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
}

#vanta{
    z-index: 0;
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
}

header{
    margin-top: 3em;
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
}

header > img {
    width: 6em;
    height: 6em;
    border-radius: 100px;
    border: 1px solid black;
    box-shadow: rgb(28 32 93 / 24%) 0px 2px 80px 0;
    backdrop-filter: blur(10px) saturate(160%) contrast(180%);
    -webkit-backdrop-filter: blur(10px) saturate(160%) contrast(180%);
}

header > h1 {
    display: inline-block;
    z-index: 1;
    font-size: 0.8em;
    font-weight: bold;
    border-radius: 1em;
    background-color: #000;
    color: #fff;
    padding: 0.3em 0.4em;
    border: 1px solid #fffa;
}

ul{
    box-sizing: border-box;
    display: flex;
    flex-direction: column;
    align-items: center;
    list-style: none;
    margin: 0 auto;
    padding: 2em;
}

ul > li {
    min-width: 60%;
    backdrop-filter: blur(10px) saturate(160%) contrast(180%);
    -webkit-backdrop-filter: blur(10px) saturate(160%) contrast(180%);
    border-radius: 10em;
    padding: 1em;
    margin: 1.4em 0;
    box-shadow: rgb(28 32 93 / 24%) 0px 2px 80px 0;
}

ul > li > a {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 0.1em;
}    

a {
    color: #000;
    text-decoration: none;
}    

